--- a/index.html
+++ b/index.html
@@ -28,41 +28,19 @@
 </head>
 <body>
 <div id="media" style="display: none; height: 100%; width: 100%;">
-    <h2>Media</h2>
-
     <audio id="audio" autoplay="true"></audio>
     <video id="video" autoplay="true"></video>
 </div>
 
 <h2>Options</h2>
-<div class="option">
-    <input id="use-datachannel" checked="checked" type="checkbox"/>
-    <label for="use-datachannel">Use datachannel</label>
-    <select id="datachannel-parameters">
-        <option value='{"ordered": true}'>Ordered, reliable</option>
-        <option value='{"ordered": false, "maxRetransmits": 0}'>Unordered, no retransmissions</option>
-        <option value='{"ordered": false, "maxPacketLifetime": 500}'>Unordered, 500ms lifetime</option>
-    </select>
-</div>
-
-<div class="option">
-    <input id="use-audio" type="checkbox"/>
-    <label for="use-audio">Use audio</label>
-    <select id="audio-codec">
-        <option value="default" selected>Default codecs</option>
-        <option value="opus/48000/2">Opus</option>
-        <option value="PCMU/8000">PCMU</option>
-        <option value="PCMA/8000">PCMA</option>
-    </select>
-</div>
 
 <div class="option">
     <input id="use-video" checked="checked" type="checkbox"/>
     <label for="use-video">Use video</label>
     <select id="video-resolution">
-        <option value="" selected>Default resolution</option>
+        <option value="">Default resolution</option>
         <option value="320x240">320x240</option>
-        <option value="640x480">640x480</option>
+        <option value="640x480" selected>640x480</option>
         <option value="960x540">960x540</option>
         <option value="1280x720">1280x720</option>
     </select>
@@ -73,8 +51,8 @@
         <option value="instance_segmentation">Instance segmentation</option>
     </select>
     <select id="video-codec">
-        <option value="default" selected>Default codecs</option>
-        <option value="VP8/90000">VP8</option>
+        <option value="default">Default codecs</option>
+        <option value="VP8/90000" selected>VP8</option>
         <option value="H264/90000">H264</option>
     </select>
 </div>
@@ -103,9 +81,6 @@
 <p>
     Signaling state: <span id="signaling-state"></span>
 </p>
-
-<h2>Data channel</h2>
-<pre id="data-channel" style="height: 200px;"></pre>
 
 <h2>SDP</h2>
 
