Add none option

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <option value="1280x720">1280x720</option>
     </select>
     <select id="video-transform">
+        <option value="none">None</option>
         <option value="classification">Classification</option>
         <option value="detection" selected>Object detection</option>
         <option value="semantic_segmentation">Semantic segmentation</option>
