Add frame rate calculation

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
     </select>
     <select id="video-transform">
         <option value="none">None</option>
-        <option value="classification">Classification</option>
-        <option value="detection" selected>Object detection</option>
-        <option value="semantic_segmentation">Semantic segmentation</option>
-        <option value="instance_segmentation">Instance segmentation</option>
+        <option value="classification">Classification ConvNeXt Large</option>
+        <option value="detection" selected>Object detection Faster R-CNN</option>
+        <option value="detection_yolo">Object detection YOLO</option>
+        <option value="semantic_segmentation">Semantic segmentation DeepLabv3</option>
+        <option value="instance_segmentation">Instance segmentation Mask R-CNN</option>
     </select>
     <select id="video-codec">
         <option value="default">Default codecs</option>
