--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
 <p>
     Signaling state: <span id="signaling-state"></span>
 </p>
+<p>
+    Timestamp: <span id="timestamp"></span>
+</p>
+<p>
+    Statistics: <span id="stats-box"></span>
+</p>
 
 <h2>SDP</h2>
 
